--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
-version: '3'
+version: '3.8'
 services:
-  mongo:
+  mongodb:
     image: mongo
-    restart: always
+    container_name: mongodb
     ports:
-      - '27017:27017'
+      - 27017:27017
+    restart: unless-stopped
     environment:
-      MONGO_INITDB_ROOT_USERNAME: mongo_user
-      MONGO_INITDB_ROOT_PASSWORD: mongo_secret
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: rootPass
